--- a/app/views/tasks/new.html.haml
+++ b/app/views/tasks/new.html.haml
@@ -1,2 +1,10 @@
-%h1 Tasks#new
-%p Find me in app/views/tasks/new.html.erb
+= render 'modal' do
+  .modal-header
+    %h5.modal-title 新規タスク作成
+    %button.close{ data: { action: 'modal#close' } }
+      %span{ aria: { hidden: true } } &times;
+  .modal-body
+    = bootstrap_form_for(@task) do |f|
+      = f.text_field :summary, label: '内容'
+      = f.date_field :due_date, label: '期限'
+      = f.submit '作成', class: 'btn btn-primary'
