完了のステータスを追加し、チェックボックスのクリックで更新できるようにした

--- a/app/views/tasks/create.turbo_stream.haml
+++ b/app/views/tasks/create.turbo_stream.haml
@@ -1,4 +1,1 @@
-= turbo_stream.append :tasks do
-  %tr
-    %td= @task.summary
-    %td= @task.due_date
+= turbo_stream.append :tasks, partial: 'task_record', locals: { task: @task }
