--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -2,4 +2,4 @@
 
 = link_to '新規タスク', new_task_path, class: 'btn btn-primary', data: { turbo_frame: 'modal' }
 
-= render 'task_table', tasks: @tasks
+= render partial: 'tasks', locals: { tasks: @tasks }
