--- a/app/views/tasks/update.turbo_stream.haml
+++ b/app/views/tasks/update.turbo_stream.haml
@@ -1,1 +1,1 @@
-= turbo_stream.replace dom_id(@task), partial: 'task_record', locals: { task: @task }
+= turbo_stream.replace dom_id(@task), partial: 'task', locals: { task: @task }
