--- a/app/views/tasks/_task.html.haml
+++ b/app/views/tasks/_task.html.haml
@@ -1,4 +1,4 @@
-%li.list-group-item{ id: dom_id(task), class: [(task.completed? ? 'text-secondary' : nil ), 'd-flex', 'justify-content-between', 'align-items-center'] }
+%li.list-group-item{ id: dom_id(task), class: [(!task.completed? || 'text-secondary'), 'd-flex', 'justify-content-between', 'align-items-center'] }
   = form_for(task, url: task_path(task), data: { turbo_frame: dom_id(task) }) do |f|
     .form-check
       = f.check_box :completed, onclick: 'this.form.requestSubmit()', class: %i[form-check-input]
