--- a/app/views/tasks/_task.html.haml
+++ b/app/views/tasks/_task.html.haml
@@ -1,8 +1,8 @@
 = turbo_frame_tag dom_id(task) do
-  %li.list-group-item{ id: dom_id(task), class: %i[d-flex justify-content-between align-items-center].append(!task.completed? || 'text-secondary') }
+  %li.list-group-item{ id: dom_id(task), class: %i[d-flex justify-content-between align-items-center task].append(!task.completed? || 'text-secondary'), data: { controller: 'task' } }
     = form_for(task, url: task_path(task), data: { turbo_frame: dom_id(task) }) do |f|
       .form-check
-        = f.check_box :completed, onclick: 'this.form.requestSubmit()', class: %i[form-check-input]
+        = f.check_box :completed, onclick: 'this.form.requestSubmit()', class: %i[form-check-input], data: { task_target: 'completed' }
         = f.label :completed, class: %i[form-check-label].append(!task.completed? || 'text-decoration-line-through') do
           = link_to edit_task_path(task), data: { turbo_frame: '_self' }, class: %i[text-reset link-underline link-underline-opacity-0] do
             = task.summary
