--- a/app/views/tasks/create.turbo_stream.haml
+++ b/app/views/tasks/create.turbo_stream.haml
@@ -1,1 +1,1 @@
-= turbo_stream.append :tasks, partial: 'task_record', locals: { task: @task }
+= turbo_stream.append :tasks, partial: 'task', locals: { task: @task }
